add log dio and some fix of service university

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
 
     <!--        android:name="${applicationName}"-->
     <application
-        android:name="UniTime"
-        android:label="scaffold"
+        android:name="${applicationName}"
+        android:label="UniTime"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name="io.flutter.embedding.android.FlutterActivity"
