--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_essentials_kit: ^2.3.5
   retrofit: ^3.3.1
   dio: ^4.0.6
+  pretty_dio_logger: ^1.1.1
 
 dev_dependencies:
   flutter_test:
