--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,11 @@ dependencies:
   retrofit: ^3.3.1
   dio: ^4.0.6
   pretty_dio_logger: ^1.1.1
+  shared_preferences: ^2.0.15
+  dropdown_search: ^5.0.5
+  smooth_page_indicator: ^1.0.0+2
+  flutter_typeahead: ^4.1.1
+  glassmorphism: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -46,3 +51,5 @@ dev_dependencies:
 flutter:
   generate: true
   uses-material-design: true
+  assets:
+    - assets/images/UniTime.png
