--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   smooth_page_indicator: ^1.0.0+2
   flutter_typeahead: ^4.1.1
   glassmorphism: ^3.0.0
+  font_awesome_flutter: ^10.3.0
 
 dev_dependencies:
   flutter_test:
