--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   flutter_typeahead: ^4.1.1
   glassmorphism: ^3.0.0
   font_awesome_flutter: ^10.3.0
+  syncfusion_flutter_calendar: ^20.4.43
+  table_calendar: ^3.0.8
 
 dev_dependencies:
   flutter_test:
