--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,7 @@ publish_to: 'none'
 version: 4.0.0+28
 
 environment:
-  sdk: ">=2.18.0 <3.0.0"
-
+  sdk: ">=2.18.6 <3.0.0"
 dependencies:
   flutter:
     sdk: flutter
@@ -36,6 +35,10 @@ dependencies:
   table_calendar: ^3.0.8
   flutter_launcher_icons: ^0.11.0
   flutter_native_splash: ^2.1.1
+  upgrader: ^6.0.1
+  modal_bottom_sheet: ^2.1.2
+  firebase_core: ^2.4.1
+  firebase_analytics: ^10.1.0
 
 dev_dependencies:
   flutter_test:
