--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,16 +63,24 @@ flutter:
   generate: true
   uses-material-design: true
   fonts:
-    - family: Poppins
+    - family: Lato
       fonts:
         - asset: assets/fonts/Lato-Regular.ttf
         - asset: assets/fonts/Lato-Italic.ttf
         - asset: assets/fonts/Lato-Light.ttf
         - asset: assets/fonts/Lato-Medium.ttf
         - asset: assets/fonts/Lato-Bold.ttf
+    - family: OpenSans
+      fonts:
+        - asset: assets/fonts/OpenSans-Regular.ttf
+        - asset: assets/fonts/OpenSans-Italic.ttf
+        - asset: assets/fonts/OpenSans-Light.ttf
+        - asset: assets/fonts/OpenSans-Medium.ttf
+        - asset: assets/fonts/OpenSans-Bold.ttf
 
   assets:
     - assets/images/UniTime.png
+    - assets/images/character.png
     - assets/images/notices/noLessons.png
     - assets/images/notices/error.png
     - assets/policy/privacy_policy_en.md
