--- a/.gitignore
+++ b/.gitignore
@@ -55,4 +55,5 @@ app.*.map.json
 #custom
 /lib/misc/server/**.dart
 /lib/misc/firebase_options.dart
+ios/Runner/GoogleService-Info.plist
 /UniTime/**
