--- a/.gitignore
+++ b/.gitignore
@@ -56,4 +56,5 @@ app.*.map.json
 /lib/misc/server/**.dart
 /lib/misc/firebase_options.dart
 ios/Runner/GoogleService-Info.plist
+ios/Runner/firebase_app_id_file.json
 /UniTime/**
